DFPL-2778: Judicial Messages collection update (#6094)
* DFPL-2778: Judicial Messages collection update

* don't update old message history and add method to concat message history for reply event

* update existing tests with new formatting for history/replies

* fix send new messages tests for new reply collection

* checkstyle

* remove super builder and to string tag

* checkstyle

* fix null pointer

* use null for old message history

* remove string utils from interim fix

* remove duplicated field from bad merge

* add check for old system replies

* add check for old system replies in seperate else if statement

* checkstyle

* swap to null check

* JudicialMessageUITest (#6154)

* JudicialMessageUITest

* removeOnlyTag

* ResolveMergeConflict

* ResolveMergeConflict

---------

Co-authored-by: prabhamuthu15 <78162288+prabhamuthu15@users.noreply.github.com>
Co-authored-by: prabha15 <prabha.muthu@justice.gov.uk>